# douyin-processor

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
config/: app.yaml
discuss/: douyin-processor-技术规范.md  架构设计方案-服务器端.md
docs/: API接口文档.md  数据字典.md  部署指南.md
scripts/: deploy.sh  run.sh
src/: __init__.py  models.py  utils.py
src/processor/: __init__.py  asr_client.py  audio_extractor.py  filesystem_client.py  status_manager.py  video_processor.py
src/server/: __init__.py  endpoints.py  main.py
